@@ -5,7 +5,7 @@ actor MorphBallPlayer : PlayerPawn
     Gravity 0.5
     XScale 0.8
     YScale 0.7
-    Player.JumpZ 0
+    Player.JumpZ 0.01
     MaxStepHeight 12
     Player.Viewheight 21
     Player.ForwardMove 1.3, 1.3
